<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_view_result"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintWidth_percent="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="16dp"
        android:gravity="end|bottom"
        tools:text="110899"
        android:textSize="32sp"/>

    <Button
        android:id="@+id/button_seven"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/button_7"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toBottomOf="@id/text_view_result"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_eight"
        app:layout_constraintBottom_toTopOf="@id/button_four"
        android:layout_marginHorizontal="16dp"
        android:textSize="24sp"/>

    <Button
        android:id="@+id/button_eight"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/button_eight"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toBottomOf="@id/text_view_result"
        app:layout_constraintStart_toEndOf="@id/button_seven"
        app:layout_constraintEnd_toStartOf="@id/button_nine"
        app:layout_constraintBottom_toTopOf="@id/button_five"
        android:layout_marginEnd="16dp"
        android:textSize="24sp"/>

    <Button
        android:id="@+id/button_nine"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/button_nine"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toBottomOf="@id/text_view_result"
        app:layout_constraintStart_toEndOf="@id/button_eight"
        app:layout_constraintEnd_toStartOf="@id/button_div"
        app:layout_constraintBottom_toTopOf="@id/button_six"
        android:layout_marginEnd="16dp"
        android:textSize="24sp"/>

    <Button
        android:id="@+id/button_div"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/button_div"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toBottomOf="@id/text_view_result"
        app:layout_constraintStart_toEndOf="@id/button_nine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_multi"
        android:layout_marginEnd="16dp"
        android:textSize="24sp"/>

    <Button
        android:id="@+id/button_four"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/button_four"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toBottomOf="@id/button_seven"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_five"
        app:layout_constraintBottom_toTopOf="@id/button_one"
        android:layout_marginHorizontal="16dp"
        android:textSize="24sp"/>

    <Button
        android:id="@+id/button_five"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/button_five"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toBottomOf="@id/button_eight"
        app:layout_constraintStart_toEndOf="@id/button_four"
        app:layout_constraintEnd_toStartOf="@id/button_six"
        app:layout_constraintBottom_toTopOf="@id/button_two"
        android:layout_marginEnd="16dp"
        android:textSize="24sp"/>

    <Button
        android:id="@+id/button_six"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/button_six"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toBottomOf="@id/button_nine"
        app:layout_constraintStart_toEndOf="@id/button_five"
        app:layout_constraintEnd_toStartOf="@id/button_multi"
        app:layout_constraintBottom_toTopOf="@id/button_three"
        android:layout_marginEnd="16dp"
        android:textSize="24sp"/>

    <Button
        android:id="@+id/button_multi"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/button_multi"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toBottomOf="@id/button_div"
        app:layout_constraintStart_toEndOf="@id/button_six"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_plus"
        android:layout_marginEnd="16dp"
        android:textSize="24sp"/>

    <Button
        android:id="@+id/button_one"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/button_one"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toBottomOf="@id/button_four"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_two"
        app:layout_constraintBottom_toTopOf="@id/button_zero"
        android:layout_marginHorizontal="16dp"
        android:textSize="24sp"/>

    <Button
        android:id="@+id/button_two"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/button_two"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toBottomOf="@id/button_five"
        app:layout_constraintStart_toEndOf="@id/button_one"
        app:layout_constraintEnd_toStartOf="@id/button_three"
        app:layout_constraintBottom_toTopOf="@id/button_point"
        android:layout_marginEnd="16dp"
        android:textSize="24sp"/>

    <Button
        android:id="@+id/button_three"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/button_three"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toBottomOf="@id/button_six"
        app:layout_constraintStart_toEndOf="@id/button_two"
        app:layout_constraintEnd_toStartOf="@id/button_plus"
        app:layout_constraintBottom_toTopOf="@id/button_clear"
        android:layout_marginEnd="16dp"
        android:textSize="24sp"/>

    <Button
        android:id="@+id/button_plus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/button_plus"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toBottomOf="@id/button_multi"
        app:layout_constraintStart_toEndOf="@id/button_three"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_minus"
        android:layout_marginEnd="16dp"
        android:textSize="24sp"/>

    <Button
        android:id="@+id/button_zero"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/button_zero"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toBottomOf="@id/button_one"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_point"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="16dp"
        android:textSize="24sp"/>

    <Button
        android:id="@+id/button_point"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/button_point"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toBottomOf="@id/button_two"
        app:layout_constraintStart_toEndOf="@id/button_zero"
        app:layout_constraintEnd_toStartOf="@id/button_clear"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="16dp"
        android:textSize="24sp"/>

    <Button
        android:id="@+id/button_clear"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/button_clear"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toBottomOf="@id/button_three"
        app:layout_constraintStart_toEndOf="@id/button_point"
        app:layout_constraintEnd_toStartOf="@id/button_minus"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="16dp"
        android:textSize="24sp"/>

    <Button
        android:id="@+id/button_minus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/button_minus"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toBottomOf="@id/button_plus"
        app:layout_constraintStart_toEndOf="@id/button_clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="16dp"
        android:textSize="24sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>